chore: remove large test files and update gitignore
- Remove badger test database files from git tracking
- Add badger database file patterns to gitignore
- Add test artifacts and OS files to gitignore
- Fixes GitHub push issue with files exceeding 100MB limit

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,20 @@ vendor
 cache/testdata
 email/testdata
 render/testdata
+
+# Badger database files
+*.vlog
+*.mem
+DISCARD
+KEYREGISTRY
+LOCK
+MANIFEST
+
+# Test artifacts
+*.test
+*.tmp
+coverage.html
+
+# OS files
+.DS_Store
+Thumbs.db
